# gitlab-variables-explorer

./: .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
.zed/: settings.json
src/: app.module.css  app.rs  lib.rs  main.rs  navbar.module.css  navbar.rs  settings.module.css  settings.rs  variables.module.css  variables.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  variables.rs
tests/: app.rs
tests/fixtures/: app.rs
