[package]
name = "gitlab-variables-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.75"
gitlab = "0.1604.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.0"
dirs = "5.0"
tauri-plugin-shell = "2"
toml = "0.8.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
